Finished V1.1 + small edits to README